<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_row="0">


        <RadioButton
            android:id="@+id/sex_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex_male" />

        <RadioButton
            android:id="@+id/sex_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_age"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_weight"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#455A64" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_height"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColorHint="#455A64" />

    <TextView
        android:id="@+id/bmrLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:text="@string/bmr"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/bmrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:layout_columnSpan="1"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</GridLayout>